--- a/ohrc_control/CMakeLists.txt
+++ b/ohrc_control/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.0.2)
+cmake_minimum_required(VERSION 3.5)
 project(ohrc_control)
 
 ## Compile as C++11, supported in ROS Kinetic and newer
@@ -7,24 +7,42 @@ add_compile_options(-std=c++1z)
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
-find_package(catkin REQUIRED COMPONENTS
-  roscpp
-  trac_ik_lib
+# find_package(catkin REQUIRED COMPONENTS
+#   roscpp
+#   trac_ik_lib
 
-  std_msgs
-  trajectory_msgs
-  eigen_conversions
+#   std_msgs
+#   trajectory_msgs
+#   eigen_conversions
 
-  tf2
-  tf2_ros
-  tf2_kdl
-  tf2_eigen
+#   tf2
+#   tf2_ros
+#   tf2_kdl
+#   tf2_eigen
 
-  ohrc_common
+#   ohrc_common
 
-  message_generation
-  message_runtime
-)
+#   message_generation
+#   message_runtime
+# )
+
+find_package(ament_cmake REQUIRED)
+find_package(rclcpp REQUIRED)
+find_package(trac_ik_lib REQUIRED)
+find_package(std_msgs REQUIRED)
+
+find_package(control_msgs REQUIRED)
+find_package(std_srvs REQUIRED)
+find_package(trajectory_msgs REQUIRED)
+find_package(interactive_markers REQUIRED)
+find_package(tf2 REQUIRED)
+find_package(tf2_ros REQUIRED)
+find_package(tf2_kdl REQUIRED)
+find_package(tf2_eigen REQUIRED)
+find_package(tf2_eigen_kdl REQUIRED)
+find_package(ohrc_common REQUIRED)
+
+find_package(ohrc_msgs REQUIRED)
 
 # find_package(PkgConfig REQUIRED)
 # pkg_check_modules(pkg_nlopt REQUIRED nlopt)
@@ -127,12 +145,15 @@ find_package(magic_enum CONFIG REQUIRED magic_enum)
 ## LIBRARIES: libraries you create in this project that dependent projects also need
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
-catkin_package(
-  INCLUDE_DIRS include
-  LIBRARIES ${PROJECT_NAME}   
-  CATKIN_DEPENDS roscpp trac_ik_lib interactive_markers tf2_kdl tf2_eigen std_msgs eigen_conversions ohrc_common
-  # DEPENDS Boost orocos_kdl #pkg_nlopt magic_enum OsqpEigen
-)
+# catkin_package(
+#   INCLUDE_DIRS include
+#   LIBRARIES ${PROJECT_NAME}   
+#   CATKIN_DEPENDS roscpp trac_ik_lib interactive_markers tf2_kdl tf2_eigen std_msgs ohrc_common
+#   # DEPENDS Boost orocos_kdl #pkg_nlopt magic_enum OsqpEigen
+# )
+ament_export_dependencies(rclcpp trac_ik_lib interactive_markers control_msgs tf2_kdl tf2_eigen std_msgs std_srvs ohrc_common)
+ament_export_include_directories(include)
+ament_export_libraries(${PROJECT_NAME})
 
 ###########
 ## Build ##
@@ -142,7 +163,7 @@ catkin_package(
 ## Your package locations should be listed before other locations
 include_directories(
   include
-  ${catkin_INCLUDE_DIRS}
+  # ${catkin_INCLUDE_DIRS}
   ${Boost_INCLUDE_DIRS}
   ${orocos_kdl_INCLUDE_DIRS}
   ${pkg_nlopt_INCLUDE_DIRS}
@@ -154,13 +175,14 @@ add_library(${PROJECT_NAME}   src/my_ik.cpp
                               # src/multi_my_ik.cpp 
                               src/cart_controller.cpp 
                               src/multi_cart_controller.cpp 
-                              src/forwarding_controller.cpp
+                              # src/forwarding_controller.cpp
                               src/admittance_controller.cpp
                               src/position_feedback_controller.cpp
                               src/hybrid_feedback_controller.cpp
 )
-add_dependencies(${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
-target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES} ${Boost_LIBRARIES} ${orocos_kdl_LIBRARIES} ${pkg_nlopt_LIBRARIES} OsqpEigen::OsqpEigen magic_enum::magic_enum)
+# add_dependencies(${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+ament_target_dependencies(${PROJECT_NAME} rclcpp trac_ik_lib interactive_markers control_msgs tf2_kdl tf2_eigen tf2_eigen_kdl std_msgs std_srvs ohrc_common ohrc_msgs)
+target_link_libraries(${PROJECT_NAME} ${Boost_LIBRARIES} ${orocos_kdl_LIBRARIES} ${pkg_nlopt_LIBRARIES} OsqpEigen::OsqpEigen magic_enum::magic_enum)
 
 
 #############
@@ -186,14 +208,14 @@ target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES} ${Boost_LIBRARIES} ${o
 ## Mark libraries for installation
 ## See http://docs.ros.org/melodic/api/catkin/html/howto/format1/building_libraries.html
 install(TARGETS ${PROJECT_NAME}
-  ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-  LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-  RUNTIME DESTINATION ${CATKIN_GLOBAL_BIN_DESTINATION}
+  ARCHIVE DESTINATION lib
+  LIBRARY DESTINATION lib
+  RUNTIME DESTINATION bin
 )
 
 ## Mark cpp header files for installation
 install(DIRECTORY include/${PROJECT_NAME}/
-  DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
+  DESTINATION include/${PROJECT_NAME}
   FILES_MATCHING PATTERN "*.h"
   PATTERN ".svn" EXCLUDE
 )
@@ -202,7 +224,7 @@ install(DIRECTORY include/${PROJECT_NAME}/
 install(FILES
 #   # myfile1
 #   # myfile2
-  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+  DESTINATION share/${PROJECT_NAME}
 )
 
 #############
@@ -217,3 +239,5 @@ install(FILES
 
 ## Add folders to be run by python nosetests
 # catkin_add_nosetests(test)
+
+ament_package()
