--- a/ohrc_teleoperation/package.xml
+++ b/ohrc_teleoperation/package.xml
@@ -51,6 +51,8 @@
   <depend>interactive_markers</depend>
   <depend>visualization_msgs</depend>
 
+  <depend>trac_ik</depend>
+
   <!-- <depend>spacenavd</depend> -->
   <!-- <depend>spacenav_node</depend> -->
 
