--- a/ohrc_control/package.xml
+++ b/ohrc_control/package.xml
@@ -46,7 +46,8 @@
   <exec_depend>rclcpp</exec_depend>
 
   <depend>boost</depend>
-  <depend>trac_ik</depend>
+  <!-- <depend>trac_ik</depend> -->
+  <depend>trac_ik_lib</depend>
 
   <depend>liborocos-kdl-dev</depend>
   <depend>libnlopt-dev</depend>
