--- a/ohrc_common/CMakeLists.txt
+++ b/ohrc_common/CMakeLists.txt
@@ -15,4 +15,5 @@ ament_auto_add_library(ohrc_common
   src/filter_utility/kalman.cpp
 )
 
+ament_export_include_directories(include)
 ament_auto_package()
