--- a/ohrc_teleoperation/CMakeLists.txt
+++ b/ohrc_teleoperation/CMakeLists.txt
@@ -2,23 +2,73 @@ cmake_minimum_required(VERSION 3.5)
 project(ohrc_teleoperation)
 
 
-find_package(ament_cmake_auto REQUIRED)
-ament_auto_find_build_dependencies()
+# find_package(ament_cmake_auto REQUIRED)
+# ament_auto_find_build_dependencies()
+
+find_package(ament_cmake REQUIRED)
+find_package(rclcpp REQUIRED)
+find_package(ohrc_control REQUIRED)
+find_package(ohrc_msgs REQUIRED)
+find_package(ohrc_common REQUIRED)
+find_package(interactive_markers REQUIRED)
+find_package(visualization_msgs REQUIRED)
+find_package(control_msgs REQUIRED)
+find_package(std_srvs REQUIRED)
+
+
+find_package(trajectory_msgs REQUIRED)
+find_package(interactive_markers REQUIRED)
+find_package(tf2 REQUIRED)
+find_package(tf2_ros REQUIRED)
+find_package(tf2_kdl REQUIRED)
+find_package(tf2_eigen REQUIRED)
+find_package(tf2_eigen_kdl REQUIRED)
+find_package(urdf REQUIRED)
 
 find_package(OsqpEigen REQUIRED)
 find_package(magic_enum CONFIG REQUIRED)
+# find_package(urdf REQUIRED)
+
+# include_directories(
+#   include
+# #   # ${catkin_INCLUDE_DIRS}
+# #   ${Boost_INCLUDE_DIRS}
+# #   ${orocos_kdl_INCLUDE_DIRS}
+# #   ${pkg_nlopt_INCLUDE_DIRS}
+# #   ${OsqpEigen_INCLUDE_DIRS}
+# #   ${magic_enum_INCLUDE_DIRS}
+# )
+
+
 
 set(interfaces
-  marker
+marker
   # state_topic
   # twist_topic
   # pose_topic
 )
 
 foreach(interface ${interfaces})
-  ament_auto_add_executable(${interface}_teleoperation src/interface/${interface}_interface.cpp src/app/${interface}_teleoperation.cpp)
+  add_executable(${interface}_teleoperation src/interface/${interface}_interface.cpp src/app/${interface}_teleoperation.cpp)
+
+  ament_target_dependencies(${interface}_teleoperation rclcpp ohrc_control ohrc_msgs ohrc_common interactive_markers visualization_msgs control_msgs std_srvs tf2_kdl urdf tf2_eigen_kdl urdf)
+  
+  target_include_directories(${interface}_teleoperation
+  PUBLIC
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+    $<INSTALL_INTERFACE:include>
+    )
   target_link_libraries(${interface}_teleoperation OsqpEigen::OsqpEigen magic_enum::magic_enum )
+
+
+
 endforeach(interface)
+
+install(TARGETS marker_teleoperation
+DESTINATION lib/${PROJECT_NAME}
+)
+
+# ı
 
 # set(state_topic_interfaces
 #   omega
@@ -60,5 +110,9 @@ endforeach(interface)
 #   add_dependencies(${interface}_twist_topic_teleoperation ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 #   target_link_libraries(${interface}_twist_topic_teleoperation ${catkin_LIBRARIES} OsqpEigen::OsqpEigen magic_enum::magic_enum)
 # endforeach(interface)
-
-ament_auto_package()
+# if(BUILD_TESTING)
+#   find_package(ament_lint_auto REQUIRED)
+#   ament_lint_auto_find_test_dependencies()
+# endif()
+# ament_auto_package()
+ament_package()
