--- a/ohrc_common/package.xml
+++ b/ohrc_common/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<package format="2">
+<package format="3">
   <name>ohrc_common</name>
   <version>0.1.0</version>
   <description>The ohrccommon package</description>
@@ -42,9 +42,7 @@
   <!-- Use doc_depend for packages you need only for building documentation: -->
   <!--   <doc_depend>doxygen</doc_depend> -->
   <!-- <buildtool_depend>catkin</buildtool_depend> -->
-  <build_depend>rclcpp</build_depend>
-  <build_export_depend>rclcpp</build_export_depend>
-  <exec_depend>rclcpp</exec_depend>
+  <depend>rclcpp</depend>
 
 
   <build_depend>geometry_msgs</build_depend>
@@ -52,6 +50,7 @@
   <exec_depend>python-is-python3</exec_depend>
   <depend>tf2_eigen</depend>
   <depend>kdl_parser</depend>
+  <depend>urdf</depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
