--- a/ohrc_control/package.xml
+++ b/ohrc_control/package.xml
@@ -1,59 +1,24 @@
 <?xml version="1.0"?>
-<package format="2">
+<package format="3">
   <name>ohrc_control</name>
   <version>0.1.0</version>
   <description>The ohrc_control package</description>
 
-
   <maintainer email="s.itadera@aist.go.jp">Shunki Itadera</maintainer>
   <license>LGPL</license>
 
-  <!-- Url tags are optional, but multiple are allowed, one per tag -->
-  <!-- Optional attribute type can be: website, bugtracker, or repository -->
-  <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/ohrc_control</url> -->
-
-
-  <!-- Author tags are optional, multiple are allowed, one per tag -->
-  <!-- Authors do not have to be maintainers, but could be -->
-  <!-- Example: -->
-  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
-
-
-  <!-- The *depend tags are used to specify dependencies -->
-  <!-- Dependencies can be catkin packages or system dependencies -->
-  <!-- Examples: -->
-  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
-  <!--   <depend>roscpp</depend> -->
-  <!--   Note that this is equivalent to the following: -->
-  <!--   <build_depend>roscpp</build_depend> -->
-  <!--   <exec_depend>roscpp</exec_depend> -->
-  <!-- Use build_depend for packages you need at compile time: -->
-    <!-- <build_depend>message_generation</build_depend> -->
-  <!-- Use build_export_depend for packages you need in order to build against this package: -->
-  <!--   <build_export_depend>message_generation</build_export_depend> -->
-  <!-- Use buildtool_depend for build tool packages: -->
-  <!--   <buildtool_depend>catkin</buildtool_depend> -->
-  <!-- Use exec_depend for packages you need at runtime: -->
-  <!--   <exec_depend>message_runtime</exec_depend> -->
-  <!-- Use test_depend for packages you need only for testing: -->
-  <!--   <test_depend>gtest</test_depend> -->
-  <!-- Use doc_depend for packages you need only for building documentation: -->
-  <!--   <doc_depend>doxygen</doc_depend> -->
-  <!-- <buildtool_depend>catkin</buildtool_depend> -->
-  <build_depend>rclcpp</build_depend>
-  <build_export_depend>rclcpp</build_export_depend>
-  <exec_depend>rclcpp</exec_depend>
-
-  <depend>boost</depend>
+  <!-- <buildtool_depend>ament_cmake_auto</buildtool_depend> -->
+  <depend>rclcpp</depend>
+  <!-- <depend>boost</depend> -->
   <!-- <depend>trac_ik</depend> -->
-  <depend>trac_ik_lib</depend>
+  <!-- <depend>trac_ik_lib</depend> -->
 
   <depend>liborocos-kdl-dev</depend>
   <depend>libnlopt-dev</depend>
   <depend>libnlopt-cxx-dev</depend>
 
   <depend>control_msgs</depend>
+
 
 
   <depend>osqp</depend>
@@ -76,18 +41,12 @@
   <!-- <depend>eigen_conversions</depend> -->
   <depend>ros2_controllers</depend>
   <depend>trajectory_msgs</depend>
- 
-<!-- <depend>visualization_msgs</depend> -->
 
   <depend>ohrc_common</depend>
   <depend>ohrc_msgs</depend>
 
   <depend>urdf</depend>
   
-  <!-- <depend>python3-catkin-tools</depend> -->
-
-
-  <!-- The export tag contains other, unspecified, tags -->
 <export>
   <build_type>ament_cmake</build_type>
 </export>
