--- a/ohrc_control/package.xml
+++ b/ohrc_control/package.xml
@@ -46,7 +46,7 @@
   <depend>ohrc_msgs</depend>
 
   <depend>urdf</depend>
-  
+  <exec_depend>ros2launch</exec_depend>
 <export>
   <build_type>ament_cmake</build_type>
 </export>
