--- a/ohrc_teleoperation/CMakeLists.txt
+++ b/ohrc_teleoperation/CMakeLists.txt
@@ -50,4 +50,15 @@ foreach(interface ${interfaces})
   )
 endforeach(interface)
 
+
+install(DIRECTORY
+  launch
+  DESTINATION share/${PROJECT_NAME}
+)
+
+install(DIRECTORY
+ config
+ DESTINATION share/${PROJECT_NAME}
+)
+
 ament_package()
