--- a/ohrc_control/config/admittance_config.yaml
+++ b/ohrc_control/config/admittance_config.yaml
@@ -1,6 +1,8 @@
-imp_ceff:
-  m: [15., 15., 5.]
-  # d: [1., 1., 1.]
-  k: [40., 40., 5]
+/**:
+  ros__parameters:
+    imp_ceff:
+      m: [15., 15., 5.]
+      # d: [1., 1., 1.]
+      k: [40., 40., 5]
 
-use_admittance: true
+    use_admittance: true
