--- a/ohrc_teleoperation/package.xml
+++ b/ohrc_teleoperation/package.xml
@@ -7,47 +7,12 @@
   <maintainer email="s.itadera@aist.go.jp">Shunki Itadera</maintainer>
   <license>LGPL</license>
 
-
-  <!-- Url tags are optional, but multiple are allowed, one per tag -->
-  <!-- Optional attribute type can be: website, bugtracker, or repository -->
-  <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/ohrc_teleoperation</url> -->
-
-
-  <!-- Author tags are optional, multiple are allowed, one per tag -->
-  <!-- Authors do not have to be maintainers, but could be -->
-  <!-- Example: -->
-  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
-
-
-  <!-- The *depend tags are used to specify dependencies -->
-  <!-- Dependencies can be catkin packages or system dependencies -->
-  <!-- Examples: -->
-  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
-  <!--   <depend>roscpp</depend> -->
-  <!--   Note that this is equivalent to the following: -->
-  <!--   <build_depend>roscpp</build_depend> -->
-  <!--   <exec_depend>roscpp</exec_depend> -->
-  <!-- Use build_depend for packages you need at compile time: -->
-  <!--   <build_depend>message_generation</build_depend> -->
-  <!-- Use build_export_depend for packages you need in order to build against this package: -->
-  <!--   <build_export_depend>message_generation</build_export_depend> -->
-  <!-- Use buildtool_depend for build tool packages: -->
-  <!--   <buildtool_depend>catkin</buildtool_depend> -->
-  <!-- Use exec_depend for packages you need at runtime: -->
-  <!--   <exec_depend>message_runtime</exec_depend> -->
-  <!-- Use test_depend for packages you need only for testing: -->
-  <!--   <test_depend>gtest</test_depend> -->
-  <!-- Use doc_depend for packages you need only for building documentation: -->
-  <!--   <doc_depend>doxygen</doc_depend> -->
-  <!-- <buildtool_depend>catkin</buildtool_depend> -->
-  <!-- <buildtool_depend>ament_cmake_auto</buildtool_depend> -->
   <depend>rclcpp</depend>
-  <!-- <depend>rclcpp_components</depend> -->
 
   <depend>ohrc_control</depend>
   <depend>ohrc_msgs</depend>
   <depend>ohrc_common</depend>
+  <depend>ohrc_hw_config</depend>
   <depend>interactive_markers</depend>
   <depend>visualization_msgs</depend>
   <depend>urdf</depend>
@@ -59,14 +24,7 @@
   <depend>std_msgs</depend>
   <depend>std_srvs</depend>
 
-
-  <!-- <depend>trac_ik_lib</depend> -->
-
-  <!-- <depend>spacenavd</depend> -->
-  <!-- <depend>spacenav_node</depend> -->
-
-
-  <!-- The export tag contains other, unspecified, tags -->
+  <exec_depend>ros2launch</exec_depend>
   <export>
     <build_type>ament_cmake</build_type>
   </export>
