--- a/ohrc_teleoperation/CMakeLists.txt
+++ b/ohrc_teleoperation/CMakeLists.txt
@@ -1,7 +1,6 @@
 cmake_minimum_required(VERSION 3.5)
 project(ohrc_teleoperation)
 
-
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(ohrc_control REQUIRED)
@@ -11,6 +10,8 @@ find_package(interactive_markers REQUIRED)
 find_package(visualization_msgs REQUIRED)
 find_package(control_msgs REQUIRED)
 find_package(std_srvs REQUIRED)
+
+find_package(geometry_msgs REQUIRED)
 
 
 find_package(trajectory_msgs REQUIRED)
@@ -27,16 +28,16 @@ find_package(magic_enum CONFIG REQUIRED)
 
 
 set(interfaces
-marker
-  # state_topic
-  # twist_topic
-  # pose_topic
+  marker
+  state_topic
+  twist_topic
+  pose_topic
 )
 
 foreach(interface ${interfaces})
   add_executable(${interface}_teleoperation src/interface/${interface}_interface.cpp src/app/${interface}_teleoperation.cpp)
 
-  ament_target_dependencies(${interface}_teleoperation rclcpp ohrc_control ohrc_msgs ohrc_common interactive_markers visualization_msgs control_msgs std_srvs tf2_kdl urdf tf2_eigen_kdl urdf)
+  ament_target_dependencies(${interface}_teleoperation rclcpp ohrc_control ohrc_msgs ohrc_common interactive_markers visualization_msgs control_msgs geometry_msgs std_srvs tf2_kdl urdf tf2_eigen_kdl urdf)
   
   target_include_directories(${interface}_teleoperation
   PUBLIC
