--- a/ohrc_teleoperation/package.xml
+++ b/ohrc_teleoperation/package.xml
@@ -23,6 +23,7 @@
   <depend>tf2_eigen_kdl</depend>
   <depend>std_msgs</depend>
   <depend>std_srvs</depend>
+  <depend>geometry_msgs</depend>
 
   <exec_depend>ros2launch</exec_depend>
   <export>
